--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
+    "canvas": "^2.11.2",
+    "canvasjs": "^1.8.3",
+    "canvasjs-react-charts": "^1.0.5",
+    "chartjs-node-canvas": "^4.1.6",
     "datatables.net": "^1.13.5",
     "datatables.net-dt": "^1.13.5",
     "download-csv": "^1.1.1",
@@ -20,7 +24,9 @@
     "primereact": "^9.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.16.0",
@@ -38,6 +44,7 @@
     "react-sticky": "^6.0.3",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.2.0",
+    "reactstrap-date-picker": "^1.0.11",
     "styled-component": "^2.8.0",
     "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4",
